--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,49 @@ dist: trusty
 sudo: required # for building gtest
 
 language: cpp
-compiler:
-  - g++-7
-  - clang++-5.0
+
+matrix:
+  include:
+
+
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+
+
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-5.0
+          packages:
+            - clang-5.0
+      env:
+        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+
+
+
+
+
+before_install:
+  - eval "${MATRIX_EVAL}"
+
+
 
 addons:
   apt:
-    sources:
-      # C++17
-      - ubuntu-toolchain-r-test
     packages:
-      # C++17
-      - g++-7
       # dependencies
       - libgoogle-glog-dev
       - libgtest-dev
       #- libeigen3-dev
-      
-#before_install:
-#  - export CXX=g++-7
 
 install:
   - travis/fix-gtest.sh
